<resources>
    <string name="app_name">SafeKeep</string>
    <string name="text_title_profile">Account</string>
    <string name="text_title_location">Location</string>
    <string name="text_title_wallet">Wallet</string>
    <string name="text_ccv">CCV</string>
    <string name="text_title_daily_deal">Deal</string>
    <string name="text_title_notifications">Notifications</string>
    <string name="text_title_booking">Booking</string>
    <string name="text_error_unknown">Error unknown</string>
    <string name="text_login">Log In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_title_message">Message</string>
    <string name="text_yes">Có</string>
    <string name="text_no">Không</string>
    <string name="text_language_vi">Vietnames</string>
    <string name="text_language_en">English</string>
    <string name="text_not_update">Chưa cập nhật</string>
    <string name="text_not_yet_signup">Register</string>
    <string name="text_forget_pass">Forgot your password?</string>
    <string name="text_forgot_pass">Forgot Password</string>
    <string name="text_reset_pass">Reset Password</string>
    <string name="text_ok">Ok</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_re_password">Re-Password</string>
    <string name="text_first_name">FirstName</string>
    <string name="text_last_name">LastName</string>
    <string name="text_mobile">Mobile</string>
    <string name="text_otp_sample">G4H7-</string>
    <string name="text_mobile_sample">+651234567</string>
    <string name="text_email">E-mail</string>
    <string name="text_wait_loading">Loading.Please wait...</string>
    <string name="text_next">Next</string>
    <string name="text_procceed_payment">Procceed to payment</string>
    <string name="text_error_connection">Network problem.Please try again!</string>
    <string name="text_save_settings">Save Settings</string>
    <string name="text_message_sms">An SMS OTP will be sent to your mobile number</string>
    <string name="text_message_forgot_pass">Please key your mobile number to get OTP and rescure your password</string>
    <string name="text_label_otp">OTP Code</string>
    <string name="text_otp">OTP</string>

    <string name="text_user_profile">User Profile</string>
    <string name="text_book_a_locker">Book a locker</string>
    <string name="text_locations">Locations</string>
    <string name="text_SAFEKEEP">SAFEKEEP</string>
    <string name="text_notifications_title">Notifications</string>
    <string name="text_daily_deals">Daily Deals</string>
    <string name="text_top_up">Top-Up</string>
    <string name="text_update_profile">Update Profile</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_wallet_now">You have left ${s} in your wallet</string>
    <string name="text_add_wallet">How much do you want to add to your wallet</string>
    <string name="text_when_need_locker">When do you need the locker?</string>
    <string name="text_select_booking_type">Please select your booking type?</string>
    <string name="text_payment_booking">You have been asigned Locker D5 at Ang Mo Kio SAFEKEEP station</string>
    <string name="text_pre_booking">Pre-booking</string>
    <string name="text_season_booking">Season Booking</string>
    <string name="text_park">Park!</string>
    <string name="text_instant_booking">Instant booking using your saved settings!</string>
    <string name="text_buy_credit">Top up your wallet by buying Credits!</string>
    <string name="text_may_add_credit">You may add credits via</string>
    <string name="text_custom_setting_user">Custom Your user settings</string>
    <string name="text_logout">Logout</string>
    <string name="text_profile_customization">Profile Customization</string>
    <string name="text_profile">Profile</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_amount">Amount</string>
    <string name="text_name_card">Name</string>

    <string name="text_notification_hi">Hi {s},you\'ve got some notifications!</string>
    <string name="text_amount_in_wallet">Amount in wallet:</string>
    <string name="text_login_facebook">Login Facebook</string>
    <string name="text_facebook_app_id">107780303149704</string>
    <string name="text_facebook_app_secret">f31e62acf40b739707c1efcaf80fff63</string>
    <string name="text_permission_denied">Permission Denied</string>
    <string name="text_select_location">Your select location</string>
    <string name="text_select_locker">Your select locker</string>
    <string name="text_main_usage_of_locker">Main usage of locker:</string>
    <string name="text_preferrer_locker_location">Preferrer locker location:</string>
    <string name="text_average_usage_duration">Average usage duration:</string>
    <string name="text_need_to_update">Need to update</string>
    <string name="text_dollar">$</string>
    <string name="text_why_need_locker">Why do you need a locker?</string>
    <string name="text_which_usually_location">At which location to you usually need the lockers?</string>
    <string name="text_location_locker">There are no locker stations near your area</string>
    <string name="text_need_the_locker">Where do you need the locker?</string>
    <string name="text_safekeep_station">The neareast SAFEKEEP station is at Ang Mo Kio Mall.</string>
    <string name="text_hint_top_daily_deal">There\'s a Easy Zippy station in your area!</string>
    <string name="text_hint_bottom_daily_deal">You have received a ${s} voucher from NTUC FairPrice.Simple flash this voucher on your mobile phone to activate it.</string>
    <string name="text_need_usually_locker">what do you usually need the lockers for?</string>
    <string name="text_long_usually_locker">How long do you usually use the lockers for?</string>
    <string name="text_locker_bycicle">Foldable Bike Storage</string>
    <string name="text_locker_clip2">Parcel Storage &amp; Collection</string>
    <string name="text_locker_clip1">Scooter Storage</string>
    <string name="text_duration">Duration</string>
</resources>
