<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMainMenu"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rlUserProfile"
                android:layout_weight="1"
                android:background="@mipmap/userprofile"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_profile"
                    android:id="@+id/textVUserProfile"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_item_menu"
                    android:padding="@dimen/margin_home_mainmenu"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/background_button_home_menu"

                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/rlLocations"
                android:layout_weight="1"
                android:background="@mipmap/locations"
                >

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_profile"
                    android:id="@+id/textVLocations"
                    android:padding="@dimen/margin_home_mainmenu"
                    android:background="@drawable/background_button_home_menu"
                    android:textSize="@dimen/text_size_item_menu"

                    android:layout_alignParentBottom="true"


                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/booking"
                android:id="@+id/rlBooking"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_book_a_locker"
                    android:id="@+id/textVBooking"
                    android:gravity="center"

                    android:background="@drawable/background_button_home_menu"
                    android:textSize="@dimen/text_size_item_menu"
                    android:padding="@dimen/margin_home_mainmenu"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/booking"
                android:layout_weight="1"
                android:id="@+id/rlWallet"
                >
                <TextView
                    android:textSize="@dimen/text_size_item_menu"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_SAFEKEEP"
                    android:id="@+id/textVSafekeep"
                    android:padding="@dimen/margin_home_mainmenu"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/background_button_home_menu"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/notification"
                android:layout_weight="1"
                android:id="@+id/rlNotification"
                >
                <TextView
                    android:textSize="@dimen/text_size_item_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_notifications_title"
                    android:id="@+id/textVNotifications"
                    android:gravity="center"
                    android:padding="@dimen/margin_home_mainmenu"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/background_button_home_menu"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/dailydeal"
                android:layout_weight="1"
                android:id="@+id/rlDailyDeal"
                >
                <TextView
                    android:textSize="@dimen/text_size_item_menu"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_daily_deals"
                    android:id="@+id/textVDailyDeals"
                    android:padding="@dimen/margin_home_mainmenu"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/background_button_home_menu"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>