<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMainMenu">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" >
            <include layout="@layout/top_bar" android:id="@+id/topBar"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_below="@+id/appBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_weight="0.9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/textVTitleTop"
                android:gravity="center"
                android:text="@string/text_select_booking_type"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="0.15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/ll1"
                >
                <RelativeLayout
                    android:layout_margin="5dp"
                    android:id="@+id/preBooking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_box"
                    >
                    <app.android.pmdlocker.com.pmd_locker.libraries.ScaleImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:padding="15dp"
                        android:id="@+id/SivPreBooking"
                        android:src="@mipmap/ic_pre_booking"
                        />
                    <TextView
                        android:layout_below="@+id/SivPreBooking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textVPreBooking"
                        android:text="@string/text_pre_booking"
                        android:gravity="center"
                        android:padding="5dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_box"
                    android:id="@+id/seasonBooking"
                    >
                    <app.android.pmdlocker.com.pmd_locker.libraries.ScaleImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:padding="15dp"
                        android:id="@+id/SivSeasonBooking"
                        android:src="@mipmap/ic_pre_booking"

                        />
                    <TextView
                        android:layout_below="@+id/SivSeasonBooking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textVSeasonBooking"
                        android:text="@string/text_season_booking"
                        android:padding="5dp"
                        android:gravity="center"
                        />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_below="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_box"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/sivHello"
                    android:id="@+id/rlContent"
                    android:layout_margin="5dp"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="10dp"
                        >
                        <app.android.pmdlocker.com.pmd_locker.libraries.ScaleImageView
                            android:layout_width="75dp"
                            android:layout_height="0dp"
                            android:src="@mipmap/ic_park"
                            android:id="@+id/sivPark"
                            android:layout_marginTop="30dp"
                            />
                        <TextView
                            android:layout_alignTop="@+id/sivPark"
                            android:layout_alignBottom="@+id/sivPark"
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:layout_toRightOf="@+id/sivPark"
                            android:text="@string/text_instant_booking"
                            />
                        <TextView
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_alignLeft="@+id/sivPark"
                            android:layout_alignRight="@+id/sivPark"
                            android:layout_below="@+id/sivPark"
                            android:layout_marginBottom="30dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/text_park"
                            />
                    </RelativeLayout>
                </RelativeLayout>
                <app.android.pmdlocker.com.pmd_locker.libraries.ScaleImageView
                    android:id="@+id/sivHello"
                    android:layout_width="68dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_hello"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@+id/rlContent"
                    />
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>