<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.android.pmdlocker.com.pmd_locker.LoginActivity"
    android:background="@color/colorBGWhite"
    android:fillViewport="true"
    tools:showIn="@layout/activity_login">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBGWhite"
    android:paddingLeft="@dimen/padding_login"
    android:paddingRight="@dimen/padding_login"
    android:paddingBottom="@dimen/padding_bottom_signup_login"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_above="@+id/textVLoginAction"
        android:gravity="center"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llUsername"
            >
            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/textVLabelUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_label"
                />
            <EditText
                android:layout_marginLeft="@dimen/padding_login"
                android:textSize="@dimen/text_size_edittext"
                android:layout_gravity="center_vertical"
                android:background="@drawable/background_button_menu"
                android:id="@+id/edVUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/padding_hor_button"
            android:layout_below="@+id/llUsername"
            android:id="@+id/llPassword"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:textSize="@dimen/text_size_label"
                android:layout_gravity="center_vertical"
                android:id="@+id/textVLabelPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="@dimen/padding_login"
                android:padding="@dimen/padding_ver_button"
                android:background="@drawable/background_button_menu"
                android:textSize="@dimen/text_size_edittext"
                android:layout_gravity="center_vertical"
                android:id="@+id/edVPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/padding_bottom_signup_login"
        android:id="@+id/llSignupForgotPass"
        >
        <TextView
            android:textColor="@color/colorTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textVNotSignUp"
            android:text="@string/text_not_yet_signup"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/padding_ver_button"
            android:paddingBottom="@dimen/padding_ver_button"
            />
        <TextView
            android:textColor="@color/colorTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textVForgetPass"
            android:text="@string/text_forget_pass"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/padding_ver_button"
            android:paddingBottom="@dimen/padding_ver_button"
            />
    </LinearLayout>
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_ver_button"
        android:paddingTop="@dimen/padding_ver_button"
        android:paddingLeft="@dimen/padding_hor_button"
        android:paddingRight="@dimen/padding_hor_button"
        android:background="@drawable/background_button_action"
        android:layout_above="@+id/llSignupForgotPass"
        android:layout_marginBottom="@dimen/margin_back_action_bar"
        android:id="@+id/textVLoginAction"
        android:text="@string/text_ok"
        />

</RelativeLayout>
</android.support.v4.widget.NestedScrollView>